# wb-product-parser

./: .gitignore  README.md  main.py  pyproject.toml
src/: client.py  export.py  normalize.py  proccess.py  utils.py
