[project]
name = "wb-product-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "mirzaev.arsen",email = "arsen.00z11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "aiohttp-client-cache (>=0.14.3,<0.15.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "cachetools (>=7.0.2,<8.0.0)",
    "fake-headers (>=1.0.2,<2.0.0)",
    "brotli (>=1.2.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
isort = "^8.0.1"

